EOS-6081: port m0spiel utility to python3
Signed-off-by: Yeshpal Jain <yeshpal.jain@seagate.com>

--- a/scripts/provisioning/roles/base-os/tasks/main.yml
+++ b/scripts/provisioning/roles/base-os/tasks/main.yml
@@ -209,6 +209,7 @@
           - python3-devel
           - python3-pip
           - python3-setuptools
+          - python3-wheel
         state: latest
   tags: c75-workarounds
 
