--- a/cortx-motr.spec.in
+++ b/cortx-motr.spec.in
@@ -47,7 +47,7 @@
 
 # configure options
 #%define  configure_release_opts --enable-release --with-trace-kbuf-size=256 --with-trace-ubuf-size=16
-%define  configure_release_opts --enable-debug --enable-release --with-trace-kbuf-size=256 --with-trace-ubuf-size=128
+%define  configure_release_opts --enable-debug  --with-trace-kbuf-size=256 --with-trace-ubuf-size=16
 %define  configure_ut_opts      --enable-dev-mode --disable-altogether-mode
 
 %if %{with cassandra}
