--- a/configure.ac
+++ b/configure.ac
@@ -237,7 +237,7 @@ AC_ARG_ENABLE([release],
         [AS_HELP_STRING([--enable-release],
                         [enable release mode (it has the same effect as --disable-dev-mode)])],
         [AS_IF([test x$enable_release = xyes],
-               [enable_dev_mode=no],[enable_dev_mode=yes])]
+               [enable_dev_mode=no enable_debug=yes],[enable_dev_mode=yes])]
 )
 
 AS_IF([test x$enable_dev_mode = xyes],
