configure: fix --enable-debug for kernel module.
Signed-off-by: Upendra Patwardhan <upendra.patwardhan@seagate.com>

--- a/configure.ac
+++ b/configure.ac
@@ -1060,7 +1060,7 @@ AS_IF([test x$enable_debug = xyes],
        # For kernel modules compilation, keep the optimization level to -O2 to
        # fix issue on CentOS 8 and Rocky Linux 8.
        # Refer https://gcc.gnu.org/bugzilla//show_bug.cgi?id=84187#c3
-       M0_KCFLAGS="-g -O2 $M0_KCFLAGS"
+       M0_KCFLAGS="-g -Og $M0_KCFLAGS"
        AC_DEFINE([ENABLE_DEBUG])
       ],[
        M0_CFLAGS="-g -O2 $M0_CFLAGS"
