CORTX-27738: Monitor script to restart crashed m0ds 	- Individual m0ds are monitored and restarted if killed
Signed-off-by: Vinoth.V <vinoth.v@seagate.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1077,6 +1077,7 @@ dist_pkglibexec_SCRIPTS  = scripts/install/usr/libexec/cortx-motr/motr-service.f
                            scripts/install/usr/libexec/cortx-motr/motr-dixinit \
                            scripts/install/usr/libexec/cortx-motr/motr-trace \
                            scripts/install/usr/libexec/cortx-motr/motr-start \
+                           scripts/install/usr/libexec/cortx-motr/motr-monitor \
                            scripts/install/usr/libexec/cortx-motr/motr-free-space-monitor
 
 ################################################################################
