CORTX-29371: Add DIX repair and rebalance support in m0_ha_sim
- Added new file for DIX repair and rebalance related functions.
- Moved common code from m0_sns_utils_common.sh to a new common file
  m0_utils_common.sh.
- Added new option as repair type (-r) to support DIX in m0_ha_sim.
  By default SNS repair and rebalance will be performed.
- Fixed codacy issues.

Signed-off-by: Sanjog Vikram Naik <sanjog.naik@seagate.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1035,6 +1035,8 @@ motr_common_SCRIPTS = \
     scripts/install$(motr_commondir)/cortx_util_funcs.sh \
     scripts/install$(motr_commondir)/core-traces \
     scripts/install$(motr_commondir)/m0_sns_utils_common.sh
+    scripts/install$(motr_commondir)/m0_dix_utils_common.sh
+    scripts/install$(motr_commondir)/m0_utils_common.sh
 EXTRA_DIST += $(motr_common_SCRIPTS)
 
 deb_pkg_files = \
