--- a/Makefile.am
+++ b/Makefile.am
@@ -986,6 +986,7 @@ motr_libexec_SCRIPTS = \
     scripts/install$(motrdir)/libexec/m0_ha_sim \
     scripts/install$(motrdir)/libexec/motr_data_recovery.sh \
     scripts/install$(motrdir)/libexec/m0trace_logrotate.sh \
+    scripts/install$(motrdir)/libexec/core_logrotate.sh \
     scripts/install$(motrdir)/libexec/motr_cfg.sh \
     scripts/install$(motrdir)/libexec/m0addb_logrotate.sh
 EXTRA_DIST += $(motr_libexec_SCRIPTS)
@@ -993,6 +994,7 @@ EXTRA_DIST += $(motr_libexec_SCRIPTS)
 motr_crondir = $(sysconfdir)/cron.hourly
 motr_cron_SCRIPTS = \
     scripts/install$(motrdir)/libexec/m0trace_logrotate.sh \
+    scripts/install$(motrdir)/libexec/core_logrotate.sh \
     scripts/install$(motrdir)/libexec/m0addb_logrotate.sh
 EXTRA_DIST += $(motr_cron_SCRIPTS)
 
