Support btree lrulist watermarks through motr sysconfig
Signed-off-by: Yash Bhamare <yash.bhamare@seagate.com>

--- a/scripts/install/opt/seagate/cortx/motr/conf/motr.conf
+++ b/scripts/install/opt/seagate/cortx/motr/conf/motr.conf
@@ -29,5 +29,9 @@ MOTR_TRACED_KEEP_LOGS_NUM=2
 MOTR_M0D_IOS_BESEG_SIZE=5497558138880
 MOTR_MOD_ADDB_RECORD_SIZE=134217728
 MOTR_M0D_ADDB_STOB_DIR='/var/log/seagate/motr/addb'
+MOTR_MOD_BTREE_TRICKLE_RELEASE=0
+MOTR_M0D_BTREE_LRU_WM_LOW=2147483648
+MOTR_M0D_BTREE_LRU_WM_MID=3221225472
+MOTR_M0D_BTREE_LRU_WM_HIGH=4294967296
 
 # All KEYS and VALUES should be above this line
