--- a/cortx-motr.spec.in
+++ b/cortx-motr.spec.in
@@ -128,7 +128,7 @@ BuildRequires:  systemd-devel
 BuildRequires:  python-devel
 %else
 # @todo Deprecate python2
-BuildRequires:  python2-devel
+#BuildRequires:  python2-devel
 BuildRequires:  python3-devel
 %endif
 @BUILD_DEPEND_LIBFAB@
