--- a/dtm0/Makefile.sub
+++ b/dtm0/Makefile.sub
@@ -4,6 +4,7 @@ nobase_motr_include_HEADERS += \
                             dtm0/clk_src.h \
                             dtm0/domain.h \
                             dtm0/drlink.h \
+                            dtm0/dtm0.h \
                             dtm0/dtx.h \
                             dtm0/dtx0.h \
                             dtm0/fop.h \
@@ -24,6 +25,7 @@ motr_libmotr_la_SOURCES += \
                         dtm0/clk_src.c \
                         dtm0/domain.c \
                         dtm0/drlink.c \
+                        dtm0/dtm0.c \
                         dtm0/dtx.c \
                         dtm0/dtx0.c \
                         dtm0/fop.c \
@@ -40,12 +42,14 @@ motr_libmotr_la_SOURCES += \
 
 nodist_motr_libmotr_la_SOURCES += \
                                   dtm0/clk_src_xc.c \
+                                  dtm0/dtm0_xc.c \
                                   dtm0/fop_xc.c \
                                   dtm0/tx_desc_xc.c
 
 
 XC_FILES += \
             dtm0/clk_src_xc.h \
+            dtm0/dtm0_xc.h \
             dtm0/fop_xc.h \
             dtm0/tx_desc_xc.h
 
