CORTX-28542: convert kernel based spiel ST to usermode (#1489)
Ported kernel based system tests to usermode, by removing 
kernel dependencies.

Signed-off-by: ‘Swapnil <swapnil.chaudhary@seagate.com>

--- a/.xperior/testds/motr-single_tests.yaml
+++ b/.xperior/testds/motr-single_tests.yaml
@@ -724,6 +724,23 @@ Tests:
     polltime : 30
     timeout  : 1800
 
+  - id       : 71spiel-sns-motr-repair
+    script   : 'm0 run-st 71spiel-sns-motr-repair'
+    dir      : src/scripts
+    executor : Xperior::Executor::MotrTest
+    sandbox  : /var/motr/root/sandbox.st-71spiel-sns-motr-repair
+    groupname: 03motr-single-node
+    polltime : 30
+    timeout  : 1800
+
+  - id       : 72spiel-sns-motr-repair-quiesce
+    script   : 'm0 run-st 72spiel-sns-motr-repair-quiesce'
+    dir      : src/scripts
+    executor : Xperior::Executor::MotrTest
+    sandbox  : /var/motr/root/sandbox.st-72spiel-sns-motr-repair-quiesce
+    groupname: 03motr-single-node
+    polltime : 30
+    timeout  : 1800
 
 
 # 25 min
