--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -9,6 +9,7 @@ reviewers:
   - madhavemuri
   - nikitadanilov
   - mehjoshi
+  - yatin-mahajan
 
 # A list of keywords to be skipped the process that add reviewers if pull requests include it 
 skipKeywords:
