CORTX-31523: Enabled dtm in rpms created
Configure script was not modifying the spec file due to which
the rpms created by passing enable dtm option were not having
the dtm code enabled which is now fixed via this patch.

Signed-off-by: Rinku Kothiya <rinku.kothiya@seagate.com>

--- a/cortx-motr.spec.in
+++ b/cortx-motr.spec.in
@@ -58,9 +58,9 @@
 %endif
 
 %if %{with ivt} || %{with ut}
-%define  configure_opts  %{configure_ut_opts} %{?configure_user_opts} %{?configure_cassandra_opts}
+%define  configure_opts  %{configure_ut_opts} %{?configure_user_opts} %{?configure_cassandra_opts} @BUILD_DEPEND_DTM@
 %else
-%define  configure_opts  %{configure_release_opts} %{?configure_user_opts} %{?configure_cassandra_opts}
+%define  configure_opts  %{configure_release_opts} %{?configure_user_opts} %{?configure_cassandra_opts} @BUILD_DEPEND_DTM@
 %endif
 
 Name:           @PACKAGE@
