--- a/scripts/install/opt/seagate/cortx/motr/conf/motr.conf
+++ b/scripts/install/opt/seagate/cortx/motr/conf/motr.conf
@@ -20,6 +20,7 @@ MOTR_M0D_BETXGR_FREEZE_TIMEOUT_MAX=300
 MOTR_M0D_BETX_REG_NR_MAX=524288
 MOTR_M0D_BETX_REG_SIZE_MAX=83886080
 MOTR_M0D_BETX_PAYLOAD_SIZE_MAX=2097152
+MOTR_M0D_BELOG_SIZE=2147483648
 MOTR_TRACED_CHECK_INPUT=30
 MOTR_TRACED_MIN_LOG_CHUNKS=2
 MOTR_TRACED_MAX_LOG_CHUNKS=6
