First phase changes adding support for usermode systemctl 	    and directory movement to user home directory.
Signed-off-by: Vimlesh Kumar <vimlesh.kumar@seagate.com>

--- a/scripts/install/usr/lib/systemd/system/motr-mkfs@.service
+++ b/scripts/install/usr/lib/systemd/system/motr-mkfs@.service
@@ -26,5 +26,5 @@ Before=motr-server@%i.service
 [Service]
 Type=oneshot
 EnvironmentFile=-/var/motr/env.sh
-Group=motr
+#Group=motr
 ExecStart=/usr/libexec/cortx-motr/motr-mkfs %i
