--- a/scripts/install/usr/lib/systemd/system/m0d@.service
+++ b/scripts/install/usr/lib/systemd/system/m0d@.service
@@ -29,5 +29,5 @@ Type=notify
 TimeoutStopSec=5min
 Restart=no
 Environment=SHELL=/bin/bash
-Group=motr
+#Group=motr
 ExecStart=/usr/libexec/cortx-motr/motr-server m0d-%i
