--- a/scripts/install/usr/lib/systemd/system/motr-trace@.service
+++ b/scripts/install/usr/lib/systemd/system/motr-trace@.service
@@ -24,5 +24,5 @@ PartOf=motr-kernel.service motr-server@%i.service m0d@%i.service
 
 [Service]
 Type=simple
-Group=motr
+#Group=motr
 ExecStart=/usr/libexec/cortx-motr/motr-trace %i
