Handling 'short write' in some cases, e.g. disk full.
In cases, e.g. disk full, the write request may return
with 'short write': the written count is less than requested count.
The assertion of requested write count equal to returned count is removed.
In this case, the rc value of this request is still 0. And next write
request may return -ENOSPC because of disk full.
This can be triggered with small disks and writing a lot of data into
the system.

Signed-off-by: Hua Huang <hua.huang@seagate.com>

--- a/.xperior/testds/motr-single_tests.yaml
+++ b/.xperior/testds/motr-single_tests.yaml
@@ -749,6 +749,16 @@ Tests:
     polltime : 30
     timeout  : 1800
 
+  - id       : 73motr-io-small-disks
+    script   : 'm0 run-st 73motr-io-small-disks'
+    dir      : src/scripts
+    executor : Xperior::Executor::MotrTest
+    sandbox  : /var/motr/root/sandbox.st-73motr-io-small-disks
+    groupname: 04motr-single-node
+    polltime : 30
+    timeout  : 1800
+
+
 
 # 25 min
 dangerous: 'yes'
