--- a/.alexrc
+++ b/.alexrc
@@ -1,3 +1,3 @@
 {
-  "allow": ["basically", "bigger", "corruption", "corruptions", "crash", "dead", "desire", "DIX", "easily", "easy", "execute", "executed", "execution", "failed", "failure", "failures", "garbage", "harder", "host-hostess", "invalid", "just", "lies", "man", "mero", "obvious", "period", "periods", "que", "reject", "remains", "sane", "simple", "special", "traps", "Xyratex"]
+  "allow": ["basically", "bigger", "clovis", "corruption", "corruptions", "crash", "dead", "desire", "dix", "DIX", "easily", "easy", "execute", "executed", "executes", "execution", "executions", "failed", "failure", "failures", "fellow", "garbage", "hack", "harder", "hooks", "host-hostess", "hosts", "invalid", "just", "lies", "man", "mero", "obvious", "period", "periods", "que", "reject", "remain", "remains", "sane", "simple", "special", "trap", "traps", "Xyratex"]
 }
