Moving cortx-motr completely in user space hence user home directory.
Signed-off-by: Vimlesh Kumar <vimlesh.kumar@seagate.com>

--- a/scripts/install/usr/lib/systemd/system/m0d@.service
+++ b/scripts/install/usr/lib/systemd/system/m0d@.service
@@ -30,4 +30,4 @@ TimeoutStopSec=5min
 Restart=no
 Environment=SHELL=/bin/bash
 #Group=motr
-ExecStart=/usr/libexec/cortx-motr/motr-server m0d-%i
+ExecStart=%h/seagate/motr/usr/libexec/cortx-motr/motr-server m0d-%i
