--- a/scripts/install/usr/lib/systemd/system/motr-client.service
+++ b/scripts/install/usr/lib/systemd/system/motr-client.service
@@ -26,7 +26,7 @@ PartOf=motr-singlenode.service
 
 [Service]
 Type=oneshot
-ExecStart=/usr/libexec/cortx-motr/motr-client start
-ExecStop=/usr/libexec/cortx-motr/motr-client stop
+ExecStart=%h/seagate/motr/usr/libexec/cortx-motr/motr-client start
+ExecStop=%h/seagate/motr/usr/libexec/cortx-motr/motr-client stop
 RemainAfterExit=yes
 KillMode=none
