--- a/scripts/install/usr/lib/systemd/system/motr-mkfs.service
+++ b/scripts/install/usr/lib/systemd/system/motr-mkfs.service
@@ -23,4 +23,4 @@ Description=Motr mkfs
 [Service]
 Type=oneshot
 #Group=motr
-ExecStart=/usr/libexec/cortx-motr/motr-mkfs
+ExecStart=%h/seagate/motr/usr/libexec/cortx-motr/motr-mkfs
