--- a/.xperior/testds/motr-single_tests.yaml
+++ b/.xperior/testds/motr-single_tests.yaml
@@ -742,6 +742,15 @@ Tests:
     polltime : 30
     timeout  : 1800
 
+  - id       : 73motr-di-corruption-detection
+    script   : 'm0 run-st 73motr-di-corruption-detection'
+    dir      : src/scripts
+    executor : Xperior::Executor::MotrTest
+    sandbox  : /var/motr/root/sandbox.st-73motr-di-corruption-detection
+    groupname: 04motr-single-node
+    polltime : 30
+    timeout  : 1800
+
 
 # 25 min
 dangerous: 'yes'
