CORTX-33718: Enable 37protocol st
Enable 37protocol st
Download cortx-motr rpm from prod env and compare
local copy of protocol.txt with rpm copy of
protocol.txt

To enable ST on CI/CD job update motr-single_tests.yaml

Signed-off-by: Prasanna Kulkarni <prasanna.kulkarni@seagate.com>

--- a/.xperior/testds/motr-single_tests.yaml
+++ b/.xperior/testds/motr-single_tests.yaml
@@ -490,7 +490,7 @@ Tests:
   - id       : 37protocol
     script   : 'm0 run-st 37protocol'
     dir      : src/scripts
-    executor : Xperior::Executor::Skip
+    executor : Xperior::Executor::MotrTest
     sandbox  : /var/motr/root/sandbox.st-37protocol
     groupname: 01motr-single-node
     polltime : 30
