--- a/.xperior/testds/motr-single_tests.yaml
+++ b/.xperior/testds/motr-single_tests.yaml
@@ -490,7 +490,13 @@ Tests:
   - id       : 37protocol
     script   : 'm0 run-st 37protocol'
     dir      : src/scripts
-    executor : Xperior::Executor::MotrTest
+    # this ST checks checksum of the BE structures during
+    # developmental phase they are bound to fail so code
+    # changes are required but ST has to be in disabled
+    # state for now when the release is in GA phase we will
+    # enable the ST again to ensure there will be no changes
+    # in BE structures.
+    executor : Xperior::Executor::Skip
     sandbox  : /var/motr/root/sandbox.st-37protocol
     groupname: 01motr-single-node
     polltime : 30
