CORTX-32194: Motr DI Generation support for Data and parity buffers (#1875)
DI Support to generate and validate checksum for data and parity at motr level.
  -  This will help to validate the data with minimal SAL layer changes.
  -  In future SAL layer also can generate DI and pass to motr.
Updated m0cp and m0cat utility for DI
-G : --DI-generate Flag to generate Data Integrity

Detailed requirements and design are to be posted later

Signed-off-by: Rajat Patil <rajat.r.patil@seagate.com>
Co-authored-by: Shankar More <shankar.more@seagate.com>
Signed-off-by: Swapnil Chaudhary <swapnil.chaudhary@seagate.com>

--- a/.xperior/testds/motr-single_tests.yaml
+++ b/.xperior/testds/motr-single_tests.yaml
@@ -759,6 +759,15 @@ Tests:
     timeout  : 1800
 
 
+  - id       : 74motr-di-corruption-detection
+    script   : 'm0 run-st 74motr-di-corruption-detection'
+    dir      : src/scripts
+    executor : Xperior::Executor::MotrTest
+    sandbox  : /var/motr/root/sandbox.st-73motr-di-corruption-detection
+    groupname: 04motr-single-node
+    polltime : 30
+    timeout  : 1800
+
 
 # 25 min
 dangerous: 'yes'
