CORTX-33803: Run UT's excluding failed tests
Since UT's are being run as a group when one of the UT fails
the regression Job in motr does not run the rest of the UT's.
Hence we want to exclude the failing UT's.

Signed-off-by: Rinku Kothiya <rinku.kothiya@seagate.com>

--- a/.xperior/testds/motr-single_tests.yaml
+++ b/.xperior/testds/motr-single_tests.yaml
@@ -20,7 +20,7 @@
 ---
 Tests:
   - id       : 00userspace-tests
-    script   : 'm0 run-ut'
+    script   : 'm0 run-ut -x mdservice-ut'
     dir      : src/scripts
     executor : Xperior::Executor::MotrTest
     #executor : Xperior::Executor::Skip
