CORTX-33129: Enable 26motr-user-kernel-tests ST which is disabled for libfabric
Test doesn't have kernel mode test, so renamed from "26motr-user-kernel-tests"
to "26motr-user-tests".

Signed-off-by: Venkateswarlu Payidimarry <venkateswarlu.payidimarry@seagate.com>

--- a/.xperior/testds/motr-single_tests.yaml
+++ b/.xperior/testds/motr-single_tests.yaml
@@ -1691,11 +1691,11 @@ Tests:
     polltime : 30
     timeout  : 900
 
-  - id       : 26motr-user-kernel-tests
-    script   : 'm0 run-st 26motr-user-kernel-tests'
+  - id       : 26motr-user-tests
+    script   : 'm0 run-st 26motr-user-tests'
     dir      : src/scripts
     executor : Xperior::Executor::MotrTest
-    sandbox  : /var/motr/root/sandbox.st-26motr-user-kernel-tests
+    sandbox  : /var/motr/root/sandbox.st-26motr-user-tests
     groupname: 02motr-single-node
     polltime : 30
     timeout  : 2400
