Enable '28sys-kvs' ST which is disabled for libfabric
1.Removed 28sys-kvs from skip list.
2.Renamed '28sys-kvs' st to '28sys-kvs-user' this is to ensure st is not
getting skipped as '28sys-kvs-kernel' is dependent on kernel and
'28sys-kvs-kernel' part of skip list.
3.Additionally passed -u (run Motr system tests in user space mode) as
parameter in '28sys-kvs-user' to avoid dependency on default value(umod=1) in
'motr/st/utils/motr_sys_test.sh'

Signed-off-by: Mukund Kanekar <mukund.kanekar@seagate.com>

--- a/.xperior/testds/motr-single_tests.yaml
+++ b/.xperior/testds/motr-single_tests.yaml
@@ -1700,12 +1700,12 @@ Tests:
     polltime : 30
     timeout  : 2400
 
-  - id       : 28sys-kvs
-    script   : 'm0 run-st 28sys-kvs'
+  - id       : 28sys-kvs-user
+    script   : 'm0 run-st 28sys-kvs-user'
     dir      : src/scripts
     executor : Xperior::Executor::MotrTest
     #executor : Xperior::Executor::Skip
-    sandbox  : /var/motr/root/sandbox.st-28sys-kvs
+    sandbox  : /var/motr/root/sandbox.st-28sys-kvs-user
     groupname: 01motr-single-node
     polltime : 30
     timeout  : 900
